<resources>
    <string name="app_name">Algorithm Executor</string>

    <!-- region Main fragment -->
    <string name="section_algorithm_title">Algorithm</string>
    <string name="section_algorithm_option_bubble">Bubble Sort</string>
    <string name="section_algorithm_option_selection">Selection Sort</string>
    <string name="section_algorithm_option_heap">Heap Sort</string>

    <string name="section_method_title">Method</string>
    <string name="section_method_option_local">Local</string>
    <string name="section_method_option_rest">REST</string>
    <string name="section_method_option_grpc">gRPC</string>

    <string name="section_data_amount_title">Data amount</string>
    <string name="section_data_amount_option_10k">10,000</string>
    <string name="section_data_amount_option_50k">50,000</string>
    <string name="section_data_amount_option_100k">100,000</string>

    <string name="section_data_type_title">Data type</string>
    <string name="section_data_type_option_integer">Integer</string>
    <string name="section_data_type_option_float">Float</string>
    <string name="section_data_type_option_object">Object</string>

    <string name="section_case_title">Case</string>
    <string name="section_case_option_worst">WORST</string>
    <string name="section_case_option_best">BEST</string>

    <string name="button_start_label">Start [%d]</string>
    <!-- endregion -->

    <!-- region Loading fragment -->
    <string name="loading_settings_title">Settings</string>
    <string name="loading_label">[%d] Processing…</string>
    <string name="loading_chosen_algorithm">Algorithm:</string>
    <string name="loading_chosen_method">Method:</string>
    <string name="loading_chosen_data_amount">Data amount:</string>
    <string name="loading_chosen_data_type">Data type:</string>
    <string name="loading_chosen_case">Case:</string>

    <string name="loading_result_title">Result by execution</string>
    <string name="loading_result_number_executions">Executed %s time(s)</string>
    <string name="loading_result_battery_percent">Consumed battery: %s %%</string>
    <string name="loading_result_time">Spent time: %s ms</string>

    <string name="button_back_label">Back</string>
    <!-- endregion -->
</resources>
